--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -277,7 +277,8 @@
                                             <td><h4>Result</h4></td>
                                             @{
                                                 string DetailFontColor = Model.Detail.Result == "P" ? "blue" : "red";
-                                                string DetailVal = Model.Detail.Result == "P" ? "Pass" : "Fail";
+                                                string DetailVal = Model.Detail.Result == "P" ? "Pass" :
+                                                        string.IsNullOrEmpty(Model.Detail.Result) ? string.Empty : "Fail";
                                             }
                                             <td class="@DetailFontColor">
                                                 @DetailVal
@@ -675,7 +676,8 @@
                                             </td>
                                             @{
                                                 string FGWTFontColor = Model.FGWT[i].Result == "P" ? "blue" : "red";
-                                                string FGWTVal = Model.FGWT[i].Result == "P" ? "Pass" : "Fail";
+                                                string FGWTVal = Model.FGWT[i].Result == "P" ? "Pass" :
+                                                        string.IsNullOrEmpty(Model.FGWT[i].Result) ? string.Empty : "Fail";
                                             }
                                             <td class="@FGWTFontColor">
                                                 @FGWTVal
@@ -787,7 +789,8 @@
                                             </td>
                                             @{
                                                 string FGPTFontColor = Model.FGPT[i].Result == "P" ? "blue" : "red";
-                                                string FGPTVal = Model.FGPT[i].Result == "P" ? "Pass" : "Fail";
+                                                string FGPTVal = Model.FGPT[i].Result == "P" ? "Pass" :
+                                                        string.IsNullOrEmpty(Model.FGPT[i].Result) ? string.Empty : "Fail";
                                             }
                                             <td class="@FGPTFontColor">
                                                 @FGPTVal
@@ -824,7 +827,8 @@
     var FGPTListSelect;
     $(function () {
         msg = new MessagerAlert();
-        EditMode = false;
+        EditMode = ('@Model.EditMode' == 'True');
+
         IsEditModeChange();
         ShrinkagesEventBind();
         ApperanceEventBind();
